<resources>
    <string name="app_name">ملتقى الأغنام</string>

    <string name="main_page">الرئيسية</string>
    <string name="wish_list_page">المفضلة</string>
    <string name="notifications_page">الإشعارات</string>
    <string name="messages_page">الرسائل</string>
    <string name="user_account_page">حسابي</string>
    <string name="info_page">عن التطبيق</string>
    <string name="contact_us_page">اتصل بنا</string>
    <string name="more_page">المزيد</string>
    <string name="adding_ad_page">إضافة إعلان</string>

    <string name="drawer_main">الرئيسة</string>
    <string name="drawer_user">حسابي</string>
    <string name="drawer_info">عن التطبيق</string>
    <string name="drawer_contact_us">اتصل بنا</string>
    <string name="drawer_mor">المزيد</string>

    <string name="background">background</string>
    <string name="logo">logo</string>
    <string name="list">list</string>
    <string name="back">back</string>
    <string name="notification">notification</string>
    <string name="home">home</string>
    <string name="main">main</string>
    <string name="favourite">favourite</string>
    <string name="speech">speech</string>
    <string name="floating_button">Floating Button</string>
    <string name="drawer_item">drawer item</string>
    <string name="ad_item">ad item</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="notification_test_value">10</string>

    <string name="info">
        تطبيق ملتقى الأغنام يوفر لك العديد من  المنتجات المختلفة و يعرض لك العديد من  الإعلانات التي يمكنك الاختيار من خلالها  أفضل المنتجات التي تريدها و يوفرلك أيضا  اماكنية التوصيل إلي المنزل بأسهل  الطرق و أرخص الأسعار
    </string>

    <string name="to_contact_us_via_social_media">
        للتواصل عبر مواقع التواصل الاجتماعي
    </string>

    <string name="welcome">
        مرحبا بك عزيزي الزائر
    </string>

    <string name="to_contact_us">
       يمكنك التواصل معنا عبر تلك الطرق
    </string>

    <string name="more_item_my_ads">إعلاناتي</string>
    <string name="more_item_change_location">تغيير المدينة</string>
    <string name="more_item_discount">نظام الخصم</string>
    <string name="more_item_follow_up">قائمة المتابعة</string>
    <string name="more_item_banned">قائمة السلع والإعلانات الممنوعة</string>
    <string name="more_item_black_list">القائمة السوداء</string>
    <string name="more_item_agreement">معاهدة استخدام الخدمة</string>

    <string name="error_connection">حدث خطأ</string>
    <string name="comments">التعليقات</string>

    <string name="no_wish_list_item">لا يوجد لديك أي إعلان في المفضلة</string>
    <string name="login_first">قم بتسجيل الدخول أولاً</string>

    <string name="user_field">user field</string>

    <string name="user_name_label">الاسم</string>
    <string name="user_phone_label">الجوال</string>
    <string name="user_password_label">كلمة المرور</string>

    <string name="user_account_button">حفظ</string>

    <string name="phone_number_label">رقم الجوال</string>

    <string name="phone_number_1">0547889754</string>
    <string name="phone_number_2">0500057905</string>

</resources>