<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    tools:context=".view.activities.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@color/AppColor"
            android:padding="@dimen/_10sdp">

            <ImageView
                android:id="@+id/drawerShowImageView"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/list"
                android:src="@mipmap/list" />

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/tajawal_bold"
                android:textColor="#ffffff"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:id="@+id/backImageView"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/list"
                android:src="@mipmap/back" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bottomBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/AppColor"
            android:padding="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/navigationToMainImageView"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:contentDescription="@string/home"
                    android:src="@mipmap/home_selected" />

                <ImageView
                    android:id="@+id/navigationToWishListImageView"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:contentDescription="@string/favourite"
                    android:src="@mipmap/heart" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_20sdp">

                    <ImageView
                        android:id="@+id/navigationToNotificationsImageView"
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_centerInParent="true"
                        android:contentDescription="@string/notification"
                        android:src="@mipmap/notification" />

                    <TextView
                        android:id="@+id/notificationNumberTextView"
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:background="@drawable/notification_text"
                        android:gravity="center"
                        android:text="@string/notification_test_value"
                        android:textColor="#ffffff" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/navigationToMessagesImageView"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:contentDescription="@string/speech"
                    android:src="@mipmap/speech_bubble" />
            </LinearLayout>


        </RelativeLayout>

        <ImageView
            android:id="@+id/addingAdImageView"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/_15sdp"
            android:background="@drawable/floating_button"
            android:clickable="true"
            android:contentDescription="@string/floating_button"
            android:focusable="true"
            android:padding="@dimen/_15sdp"
            android:src="@mipmap/plus" />

        <fragment
            android:id="@+id/nav_host"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/bottomBar"
            android:layout_below="@+id/topBar"
            android:layout_gravity="center"
            android:gravity="center"
            app:navGraph="@navigation/nav_graph"
            tools:ignore="FragmentTagUsage" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="@dimen/_230sdp"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:background="@drawable/drawer_background"
        android:orientation="vertical"
        tools:ignore="RtlHardcoded">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/drawerItemsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>