<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layoutDirection="rtl"
    tools:context=".view.fragments.UserFragment">

    <ProgressBar
        android:id="@+id/userAccountProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateDrawable="@drawable/progress" />

    <TextView
        android:id="@+id/userAccountLoginFirstTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="@font/tajawal_bold"
        android:gravity="center"
        android:text="@string/login_first"
        android:textColor="@color/AppColor"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/userAccountContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/commentUserImageView"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/_5sdp"
                android:adjustViewBounds="true"
                android:background="@drawable/ad_item_image_background"
                android:scaleType="fitCenter"
                app:riv_corner_radius="@dimen/_50sdp" />

            <TextView
                android:id="@+id/userNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/tajawal_bold"
                android:gravity="center_horizontal"
                android:textSize="@dimen/_20ssp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:fontFamily="@font/tajawal_bold"
                android:text="@string/user_name_label" />

            <EditText
                android:id="@+id/userNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:autofillHints="@string/user_field"
                android:background="@drawable/app_field_background"
                android:gravity="start"
                android:hint="@string/user_field"
                android:inputType="text"
                android:padding="@dimen/_10sdp"
                android:textAlignment="viewStart" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:fontFamily="@font/tajawal_bold"
                android:text="@string/user_phone_label" />

            <TextView
                android:id="@+id/userPhoneEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/app_field_background"
                android:gravity="start"
                android:padding="@dimen/_10sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:fontFamily="@font/tajawal_bold"
                android:text="@string/user_password_label" />

            <EditText
                android:id="@+id/userPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:autofillHints="@string/user_field"
                android:background="@drawable/app_field_background"
                android:gravity="start"
                android:hint="@string/user_field"
                android:inputType="textPassword"
                android:padding="@dimen/_10sdp"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/userAccountUpdateTextView"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_50sdp"
                android:background="@drawable/user_account_button"
                android:fontFamily="@font/tajawal_bold"
                android:gravity="center_horizontal"
                android:padding="@dimen/_10sdp"
                android:text="@string/user_account_button"
                android:textColor="#ffffff" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>